# SNIFS-pipeline

./: .gitignore  Dockerfile  Makefile  pyproject.toml
projects/common/: pyproject.toml
projects/common/src/common/: __init__.py  log.py  prefect_utils.py  utils.py
projects/pipeline/: pyproject.toml
projects/pipeline/src/pipeline/: __init__.py  build_filestore.py  main.py  reduce_channel.py  reduce_channel_exposure.py
projects/pipeline/src/pipeline/config/: __init__.py  reduce_channel_exposure.py
projects/pipeline/src/pipeline/global_settings/: __init__.py  global_settings.py
projects/pipeline/src/pipeline/resolver/: __init__.py  common.py  match_arc.py  match_continuum_flats.py  match_weather.py  registry.py  resolver.py
projects/pipeline/src/pipeline/tasks/: __init__.py  augment.py  calibrate.py  cfht_weather.py  common.py  correct_dichroic.py  extract_spectrum.py  preprocess.py  remove_continuum.py
src/pipeline/: __init__.py  parse_snifs_run_logs.py  reduce_channel_exposure.py
src/pipeline/common/: __init__.py  log.py  prefect_utils.py  utils.py
src/pipeline/config/: global_settings.py  reduce_channel_exposure.py
src/pipeline/resolver/: __init__.py  common.py  match_arc.py  match_continuum_flats.py  match_raw_logs.py  match_weather.py  registry.py  resolver.py
src/pipeline/tasks/: __init__.py  augment.py  build_filestore.py  calibrate.py  cfht_weather.py  common.py  correct_dichroic.py  extract_spectrum.py  preprocess.py  remove_continuum.py  snifs_run_logs.py
