[project]
name = "SNIFS-pipeline"
version = "0.1.0"
description = "A modern data reduction pipeline for SNIFS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.5.4,<1",
    "pre-commit>=3.7.0",
]

[tool.uv.workspace]
members = ["projects/*"]

[tool.uv.sources]
common = { workspace = true }

# TODO: Swap over to https://github.com/astral-sh/uv/issues/8779 when ready
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
target-version = "py312"
