[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samuel Hinton", email = "samuelreay@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "common",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandera>=0.23.1",
    "polars>=1.26.0",
    "prefect>=3.2.14",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }
